--- a/index.html
+++ b/index.html
@@ -10,73 +10,44 @@
 <body>
     <nav>
         <header>
-           <div class="logo-icon"></div>
+            <div class="navbar-logo">
+                <a href="index.html" class="navbar-icon" role="link">
+                <div class="logo-icon"></div>
+                <span>UNIVERSITAS GARUDA</span>
+                </a>
+            </div>
         </header>
 
         <section class="nav-container">
-            <a href="#" class="nav-item">Home</a>
-            <a href="#" class="nav-item">Our Profile</a>
-            <a href="#" class="nav-item">Achievement</a>
-            <a href="#" class="nav-item">Massage Us</a>
+                <a href="#" class="nav-item">PROFILE</a>
+                <a href="#" class="nav-item">HOME</a>
+                <a href="#" class="nav-item">ACHIEVEMENT</a>
+                <a href="#" class="nav-item">MESSAGE</a>
         </section>
     </nav>
+    <hr />
 
-    <hr>
+    <section>
+        <h1>MESSAGE US</h1>
+        <form action="" method="post">
+            <div class="form-grup">
+            <label for="name">NAME :</label>
+            <input type="text" name="name" id="name" placeholder="Enter your name">
+            <label for="date">AGE :</label>
+            <input type="number" name="age" id="age" placeholder="Enter your age">
+            <label for="gender">GENDER :</label>
+            <input type="radio" id="male" name="gender" value="male">
+            <label for="male">Male</label><br>
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="female">Female</label>
+            <label for="Message">Message :</label>
+            <textarea name="message" id="message"></textarea>
+            <input type="submit">
+            </div>
+        </form>
 
-    <main>
-        <article>
-            <header>
-                <h1>HI User. Welcome to My Website</h1>
-            </header>
-
-            <p>Ini adalah website latihan pertama</p>
-
-            <div class="banner-img"></div>
-        </article>
-
-        <hr>
-
-        <section>
-            <header>
-                <h1>OUR PROFILE</h1>
-            </header>
-
-            <section class="profile-container">
-                <div class="profile-item">
-                    <div class="profile-img"></div>
-                    <h2>PROFESIONAL</h2>
-                </div>
-
-                <div class="profile-item">
-                    <div class="profile-img"></div>
-                    <h2>SPORT</h2>
-                </div>
-
-                <div class="profile-item">
-                    <div class="profile-img"></div>
-                    <h2>CLASSROOM</h2>
-                </div>
-            </section>
-        </section>
-
-        <hr>
-        <section>
-            <header>
-                <h1>MASSAGE US</h1>
-            </header>
-
-             <form action="">
-
-            </form>
-            <div>
-
-             </div>
-        </section>
-    </main>
-
-    <hr>
-    <footer >
-        <p>Made By Nope</p>
-    </footer>
+        <div id="result">
+            <textarea name="" id="resultbox"></textarea>
+        </div>
+    </section>
 </body>
-</html>
